--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.2",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-github-contribution-calendar": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
